Fix for Bug #38739 Assert in Transaction::initialize during simple SELECT queries

Fixes an A-B-A problem in TransactionManager::startTransaction() where
it was possible that the transaction object could be reused by another
thread between the test for being available for reuse and actually
being allocated.